# argos-gym

./: README.md
ai/: main.py
ai/argos/: argos_io.py  argos_runner.py
ai/gym_argos/: __init__.py
ai/gym_argos/envs/: __init__.py  argos_env.py
argos/: footbot-ai.argos
controller/: .gitignore  CMakeLists.txt  footbot_ai_controller.cpp  footbot_ai_controller.h
